--- a/src/style.scss
+++ b/src/style.scss
@@ -71,3 +71,232 @@
         }
     }
 }
+
+.ws-home{
+    background-color: aqua;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .ws-container{
+        border: 1px solid white;
+        border-radius: 10px;
+        width: 65%;
+        height: 80%;
+        display: flex;
+        overflow: hidden;
+
+        .ws-sidebar{
+            flex: 1;
+            background-color: darkcyan;
+
+            .ws-navbar{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                background-color: darkblue;
+                color: white;
+                height: 50px;
+                padding: 10px;
+
+                .ws-logo{
+                    font-weight: bold;
+                }
+
+                .ws-user{
+                    display: flex;
+                    gap: 10px;
+
+                    img{
+                        background-color: red;
+                        height: 24px;
+                        width: 24px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+
+                    button{
+                        background-color: red;
+                        font-size: 10px;
+                        border: none;
+                        cursor: pointer;
+                    }
+                }
+            }
+            .ws-search{
+                border-bottom: 1px solid red;
+
+                .ws-search-form{
+                    padding: 10px;
+
+                    input{
+                        background-color: transparent;
+                        border: none;
+                        color: white;
+                        outline: none;
+
+                        &::placeholder{
+                            color: lightgrey;
+                        }
+                    }
+                }
+            }
+            .ws-user-chat{
+                padding: 10px;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                color: white;
+                cursor: pointer;
+
+                &:hover{
+                    background-color: darkgoldenrod;
+                }
+
+                img{
+                    background-color: red;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+
+                .ws-user-chat-info{
+
+                    span{
+                        font-size: 18px;
+                        font-weight: 500;
+
+                    }
+
+                    p{
+                        font-size: 14px;
+                        color: lightgrey;
+                    }
+                }
+            }
+        }
+
+        .ws-chat{
+            flex: 2;
+
+            .ws-chat-info{
+                height: 50px;
+                padding: 10px;
+                background-color: lawngreen;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .ws-chat-icons{
+                    display: flex;
+                    gap: 10px;
+
+                    img{
+                        width: 24px;
+                        height: 24px;
+                        background-color: red;
+                        border-radius: 50%;
+                    }
+                }
+            }
+            .ws-messages{
+                background-color: lightgreen;
+                padding: 10px;
+                height: calc(100% - 160px);
+                overflow: scroll;
+
+                .ws-message{
+                    display: flex;
+                    gap: 20px;
+                    margin-bottom: 20px;
+
+                    .ws-message-info{
+                        display: flex;
+                        flex-direction: column;
+                        color: grey;
+                        font-weight: 300;
+
+                        img{
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
+                            background-color: red;
+                        }
+                    }
+
+                    .ws-message-content{
+                        max-width: 80%;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+
+                        p{
+                            background-color: white;
+                            padding: 10px 20px;
+                            border-radius: 0 10px 10px 10px;
+                            max-width: max-content;
+                        }
+
+                        img{
+                            width: 50%;
+                        }
+                    }
+                    &.ws-owner{
+                        flex-direction: row-reverse;
+                        .ws-message-content{
+                            align-items: flex-end;
+
+                            p{
+                                background-color: aquamarine;
+                                color: white;
+                                border-radius: 10px 0 10px 10px;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .ws-input{
+                height: 50px;
+                background-color: white;
+                padding: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                input{
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    font-size: 18px;
+                    color: red;
+
+                    &::placeholder{
+                        color: green;
+                    }
+                }
+
+                .ws-send{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    img{
+                        width: 24px;
+                        cursor: pointer;
+                    }
+
+                    button{
+                        border: none;
+                        padding: 10px 15px;
+                        color: white;
+                        background-color: bisque;
+                    }
+                }
+            }
+        }
+    }
+}
