--- a/src/style.css
+++ b/src/style.css
@@ -63,4 +63,208 @@
   color: red;
   font-size: 12px;
   margin-top: 10px;
+}
+
+.ws-home {
+  background-color: aqua;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ws-home .ws-container {
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 65%;
+  height: 80%;
+  display: flex;
+  overflow: hidden;
+}
+.ws-home .ws-container .ws-sidebar {
+  flex: 1;
+  background-color: darkcyan;
+}
+.ws-home .ws-container .ws-sidebar .ws-navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: darkblue;
+  color: white;
+  height: 50px;
+  padding: 10px;
+}
+.ws-home .ws-container .ws-sidebar .ws-navbar .ws-logo {
+  font-weight: bold;
+}
+.ws-home .ws-container .ws-sidebar .ws-navbar .ws-user {
+  display: flex;
+  gap: 10px;
+}
+.ws-home .ws-container .ws-sidebar .ws-navbar .ws-user img {
+  background-color: red;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.ws-home .ws-container .ws-sidebar .ws-navbar .ws-user button {
+  background-color: red;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+}
+.ws-home .ws-container .ws-sidebar .ws-search {
+  border-bottom: 1px solid red;
+}
+.ws-home .ws-container .ws-sidebar .ws-search .ws-search-form {
+  padding: 10px;
+}
+.ws-home .ws-container .ws-sidebar .ws-search .ws-search-form input {
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+}
+.ws-home .ws-container .ws-sidebar .ws-search .ws-search-form input::-moz-placeholder {
+  color: lightgrey;
+}
+.ws-home .ws-container .ws-sidebar .ws-search .ws-search-form input::placeholder {
+  color: lightgrey;
+}
+.ws-home .ws-container .ws-sidebar .ws-user-chat {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  cursor: pointer;
+}
+.ws-home .ws-container .ws-sidebar .ws-user-chat:hover {
+  background-color: darkgoldenrod;
+}
+.ws-home .ws-container .ws-sidebar .ws-user-chat img {
+  background-color: red;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.ws-home .ws-container .ws-sidebar .ws-user-chat .ws-user-chat-info span {
+  font-size: 18px;
+  font-weight: 500;
+}
+.ws-home .ws-container .ws-sidebar .ws-user-chat .ws-user-chat-info p {
+  font-size: 14px;
+  color: lightgrey;
+}
+.ws-home .ws-container .ws-chat {
+  flex: 2;
+}
+.ws-home .ws-container .ws-chat .ws-chat-info {
+  height: 50px;
+  padding: 10px;
+  background-color: lawngreen;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.ws-home .ws-container .ws-chat .ws-chat-info .ws-chat-icons {
+  display: flex;
+  gap: 10px;
+}
+.ws-home .ws-container .ws-chat .ws-chat-info .ws-chat-icons img {
+  width: 24px;
+  height: 24px;
+  background-color: red;
+  border-radius: 50%;
+}
+.ws-home .ws-container .ws-chat .ws-messages {
+  background-color: lightgreen;
+  padding: 10px;
+  height: calc(100% - 160px);
+  overflow: scroll;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message .ws-message-info {
+  display: flex;
+  flex-direction: column;
+  color: grey;
+  font-weight: 300;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message .ws-message-info img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-color: red;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message .ws-message-content {
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message .ws-message-content p {
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 0 10px 10px 10px;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message .ws-message-content img {
+  width: 50%;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message.ws-owner {
+  flex-direction: row-reverse;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message.ws-owner .ws-message-content {
+  align-items: flex-end;
+}
+.ws-home .ws-container .ws-chat .ws-messages .ws-message.ws-owner .ws-message-content p {
+  background-color: aquamarine;
+  color: white;
+  border-radius: 10px 0 10px 10px;
+}
+.ws-home .ws-container .ws-chat .ws-input {
+  height: 50px;
+  background-color: white;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.ws-home .ws-container .ws-chat .ws-input input {
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  color: red;
+}
+.ws-home .ws-container .ws-chat .ws-input input::-moz-placeholder {
+  color: green;
+}
+.ws-home .ws-container .ws-chat .ws-input input::placeholder {
+  color: green;
+}
+.ws-home .ws-container .ws-chat .ws-input .ws-send {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.ws-home .ws-container .ws-chat .ws-input .ws-send img {
+  width: 24px;
+  cursor: pointer;
+}
+.ws-home .ws-container .ws-chat .ws-input .ws-send button {
+  border: none;
+  padding: 10px 15px;
+  color: white;
+  background-color: bisque;
 }/*# sourceMappingURL=style.css.map */
